Fix z-index

--- a/assets/stylesheets/search.styl
+++ b/assets/stylesheets/search.styl
@@ -25,6 +25,7 @@ header-height = 70px
   border-top 2px solid purple-color
   overflow-y auto
   -webkit-overflow-scrolling touch
+  z-index 1
 
 .is-visually-hidden
   position absolute
